--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ _______________________________________<p></font>
 <p>
 <p>
 <p>
-<p><font size="6" color="orange" face="arial">"في حال وجود اي مشكلة او استفسار فلا تتردد بالتواصل معنا على صفحة المشرفين"</font>
+<p><font size="6" color="orange" face="arial">"في حال وجود اي مشكلة او استفسار
+  <p>فلا تتردد بالتواصل معنا على صفحة المشرفين"</font>
 <div class="buttons-container">
 <a href="صفحة المشرفين.html" class="button">صفحة المشرفين</a>
 </div>
@@ -54,3 +55,4 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
