--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ _______________________________________<p></font>
   <p>"باي زون</font><p>
 <pre>
 
-<A HREF="الاجهزة الكهربائية.HTML"><IMG SRC="1.PNG" ALT="خصم %25" HEIGHT="250" WIDTH="450">
+<A HREF="الاجهزة الكهربائية.html"><IMG SRC="1.PNG" ALT="خصم %25" HEIGHT="250" WIDTH="450">
 <FONT COLOR="white" SIZE="6" FACE="ARIAL">لاتفوت الفرصة واضغط هنا لكسب عرض %25 
 على جميع الاجهزة الكهربائية</font></a>
 <p>
-<A HREF="الملابس الجاهزة.HTML"><IMG SRC="2.PNG" ALT="خصم %15" HEIGHT="250" WIDTH="450">
+<A HREF="الملابس الجاهزة.html"><IMG SRC="2.PNG" ALT="خصم %15" HEIGHT="250" WIDTH="450">
 <FONT COLOR="white" SIZE="6" FACE="ARIAL">لاتفوت الفرصة واضغط هنا لكسب عرض %15
 على جميع الطقومات الشبابية والرجالية</font></a>
 <p>
@@ -61,6 +61,7 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
 
 
 
