--- a/صفحة المشرفين.html
+++ b/صفحة المشرفين.html
@@ -57,8 +57,9 @@ Transition: background-color 0.3s ease;}
 </table>
 
 <div class="buttons-container">
-<a href="موقع buyzone.html" class="button">العودة</a>
+<a href="index.html" class="button">العودة</a>
 </div>
 </pre>
 </body>
+
 </html>
