--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -74,7 +74,8 @@ _______________________________________<p></font>
 
 </table><p>
 <div class="buttons-container">
-<a href="موقع buyzone.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div>
 </body>
+
 </html>
