--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -90,8 +90,9 @@ _______________________________________<p></font>
 
 </table><p>
 <div class="buttons-container">
-<a href="موقع buyzone.html" class="button">العودة الى صفحة الموقع الرسمية</a>
+<a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div><p>
 </pre>
 </body>
+
 </html>
