--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -24,7 +24,7 @@ Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #FF0000;}
 </style>
 </head>
-<body bgcolor="beige" style="background-image:url('خلفية صفحة الملابس.jpeg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
+<body bgcolor="beige" style="background-image:url('الخلفية.png'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
 <center><img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
 
 <b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
