--- a/صورة 1.html
+++ b/صورة 1.html
@@ -24,7 +24,7 @@ Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #ff0000;}
 </style>
 </head>
-<body bgcolor="azure" style="background-image:url('الاسعار.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
+<body bgcolor="azure" style="background-image:url('خلف.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
 <center><table bgcolor="white" border="3" bordercolor="silver" align="center" height="25" width="15" cellspacing="3" cellpadding="5">
 <center><tr>
 <th><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
