--- a/صورة 1.html
+++ b/صورة 1.html
@@ -26,13 +26,13 @@ Transition: background-color 0.3s ease;}
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="30%" cellspacing="3" cellpadding="5">
+<center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="35%" cellspacing="3" cellpadding="5">
 <center><tr>
 <th><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح<p> 
 وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي </font>
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 110,000 ريال</s></font><p>
-<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد=<p> 93,500 ريال</font>
+<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 93,500 ريال</font>
 
 <div class="buttons-container">
 <a href="صفحة الدفع.html" class="button">أطلب الآن</a>&nbsp &nbsp
