--- a/صورة 2.html
+++ b/صورة 2.html
@@ -19,7 +19,7 @@ Background-color: #a97142;
 Color: white;
 Text-decoration: none;
 Border-radius: 10px;
-Font-size: 25px;
+Font-size: 20px;
 Font-weight: bold;
 Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #ff0000;}
@@ -28,7 +28,7 @@ Transition: background-color 0.3s ease;}
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
 <center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="90%" cellspacing="3" cellpadding="5">
 <center><tr>
-<th><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center"><p>
+<th><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق، <p>
 وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة <p>
 بحذاء رياضي أبيض </font>
@@ -45,3 +45,4 @@ Transition: background-color 0.3s ease;}
 </body>
 
 </html>
+
