--- a/صورة 3.html
+++ b/صورة 3.html
@@ -2,6 +2,7 @@
 <head>
 <title>صورة 3</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 Body
 .container {text-align: center;}
@@ -18,16 +19,16 @@ Background-color: #a97142;
 Color: white;
 Text-decoration: none;
 Border-radius: 10px;
-Font-size: 25px;
+Font-size: 20px;
 Font-weight: bold;
 Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #ff0000;}
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><table bgcolor="white" border="3" bordercolor="silver" align="center" height="25" width="15" cellspacing="3" cellpadding="5">
+<center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="90%" cellspacing="3" cellpadding="5">
 <center><tr>
-<th><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center"><p>
+<th><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني<p>
 وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض </font> 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 95,000 ريال</s></font><p>
@@ -41,4 +42,5 @@ Transition: background-color 0.3s ease;}
 </tr>
 </table>
 </body>
+
 </html>
