--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -2,6 +2,7 @@
 <head>
 <title>الملابس الجاهزة</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 Body
 .container {text-align: center;}
@@ -31,7 +32,7 @@ Transition: background-color 0.3s ease;}
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الملابس الجاهزة </font><p>
 <pre>
-<table bgcolor="white" border="3" bordercolor="silver" align="center" height="1100" width="500" cellspacing="3" cellpadding="5">
+<table bgcolor="white" border="3" bordercolor="silver" align="center" width="90%" cellspacing="3" cellpadding="5">
 <center><tr>
 <th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
