--- a/الملابس الجاهزة.html
+++ b/الملابس الجاهزة.html
@@ -34,56 +34,53 @@ _______________________________________<p></font>
 <pre>
 <table bgcolor="white" border="3" bordercolor="silver" align="center" width="90%" cellspacing="3" cellpadding="5">
 <center><tr>
-<th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center"><p>
+<th><a href="صورة 1.html"><IMG SRC="صورة 1.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح
 وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي</a>
 
 </th>
-<th><a href="صورة 2.html"><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center"><p>
+<th><a href="صورة 2.html"><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق
  وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة
 بحذاء رياضي أبيض</a></th>
 </tr>
 <tr>
-<td><center><a href="صورة 3.html"><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 3.html"><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني
 وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض</a>
 
 </td>
-<td><center><a href="صورة 4.html"><IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 4.html"><IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">.طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء
 مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل
 الطقم بحذاء لوفر أسود</a></td>
 </tr>
 <tr>
-<td><center><a href="صورة 5.html"><IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 5.html"><IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن
 المائل للأسود، يتألف من قميص بأكمام طويلة
 وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود</a>
 </td>
-<td><center><a href="صورة 6.html"><IMG SRC="صورة 6.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 6.html"><IMG SRC="صورة 6.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال ومريح. يتكون من قميص بولو بني 
 مع ياقة بيج وبنطلون بيج فاتح بخصر مرن، ويكمل
 الطقم حذاء رياضي متعدد الألوان (بيج وبني وأخضر)</a></td>
 </tr>
 <tr>
-<td><center><a href="صورة 7.html"><IMG SRC="صورة 7.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 7.html"><IMG SRC="صورة 7.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجول الذهبي. يتكون من قميص أصفر فاتح
 .مع قميص داخلي أبيض،وبنطلون أخضر زيتوني داكن
 يكمل الإطلالة حذاء رياضي أبيض</a></td>
-<td><center><a href="صورة 8.html"><IMG SRC="صورة 8.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 8.html"><IMG SRC="صورة 8.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم شبابي كلاسيكي وأنيق. يتكون من قميص أبيض
- وبنطلون كحلي داكن، وحذاء رياضي أبيض</a>
-
-</td>
+ وبنطلون كحلي داكن، وحذاء رياضي أبيض</a></td>
 </tr>
 <tr>
-<td><center><a href="صورة 9.html"><IMG SRC="صورة 9.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 9.html"><IMG SRC="صورة 9.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم صيفي منعش. يتكون من قميص أزرق فاتح، وبنطلون 
 جينز أبيض، وحذاء رياضي أبيض</a>
-
 </td>
-<td><center><a href="صورة 10.html"><IMG SRC="صورة 10.PNG" ALT="ملابس جاهزة" align="center"><p>
+<td><center><a href="صورة 10.html"><IMG SRC="صورة 10.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
 <FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي عصري وجريء. يتكون من قميص بولو
 أخضر فاتح مخطط بخطوط طولية، وبنطلون أسود واسع
 الساق. ويكتمل الطقم بحذاء رياضي أبيض بنعل برتقالي</a></td>
