--- a/صورة 1.html
+++ b/صورة 1.html
@@ -14,7 +14,7 @@ Gap: 20px;
 Justify-content: center;}
 .button {
 Display: inline-block;
-Padding: 10px 15px;
+Padding: 15px 30px;
 Background-color: #a97142;
 Color: white;
 Text-decoration: none;
@@ -32,7 +32,7 @@ Transition: background-color 0.3s ease;}
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح<p> 
 وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي </font>
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 110,000 ريال</s></font><p>
-<FONT size="7" color="red" FACE="ARIAL">السعر الجديد= 93,500 ريال </font>
+<FONT size="7" color="red" FACE="ARIAL"><pre>السعر الجديد= 93,500 ريال </font>
 
 <div class="buttons-container">
 <a href="صفحة الدفع.html" class="button">أطلب الآن</a>&nbsp &nbsp
