--- a/صورة 1.html
+++ b/صورة 1.html
@@ -19,7 +19,7 @@ Background-color: #a97142;
 Color: white;
 Text-decoration: none;
 Border-radius: 10px;
-Font-size: 18px;
+Font-size: 20px;
 Font-weight: bold;
 Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #ff0000;}
@@ -32,7 +32,9 @@ Transition: background-color 0.3s ease;}
 <FONT color="red" SIZE="4" FACE="ARIAL">،طقم كاجوال أنيق وعصري. يتكون من قميص بيج فاتح<p> 
 وبنطلون جينز أزرق فاتح، وحذاء رياضي أبيض كلاسيكي </font>
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 110,000 ريال</s></font><p>
-<FONT size="7" color="red" FACE="ARIAL"><pre>السعر الجديد=ريال </font>
+<FONT size="7" color="red" FACE="ARIAL"><pre>السعر الجديد=
+  93,500
+  ريال </font>
 
 <div class="buttons-container">
 <a href="صفحة الدفع.html" class="button">أطلب الآن</a>&nbsp &nbsp
