--- a/صورة 2.html
+++ b/صورة 2.html
@@ -7,6 +7,11 @@
 body {
 text-align: center;
 }
+.product-card {
+max-width: 500px;
+margin: 20px auto; 
+width: 90%; 
+}
 .buttons-container {
 display: flex;
 gap: 20px;
@@ -29,8 +34,8 @@ white-space: nowrap;
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="50%" cellspacing="3" cellpadding="5">
-<center><tr>
+<table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
+<tr>
 <th><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
 
 <p><FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق،
@@ -51,5 +56,4 @@ white-space: nowrap;
 </tr>
 </table>
 </body>
-
 </html>
