--- a/صورة 2.html
+++ b/صورة 2.html
@@ -5,32 +5,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
-text-align: center;
+    text-align: center;
 }
 .product-card {
-max-width: 500px;
-margin: 20px auto; 
-width: 90%; 
+    max-width: 500px;
+    margin: 20px auto; 
+    width: 90%; 
+}
+.description-text {
+    text-align: center; 
+    display: block;
+    margin: 10px 15px 20px 15px; 
+    line-height: 1.5; 
 }
 .buttons-container {
-display: flex;
-gap: 20px;
-justify-content: center;
-padding: 15px 0;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    padding: 15px 0;
 }
 .button {
-display: inline-block;
-padding: 15px 35px;
-background-color: #a97142;
-color: white;
-text-decoration: none;
-border-radius: 10px;
-font-size: 20px;
-font-weight: bold;
-transition: background-color 0.3s ease;
-white-space: nowrap;
+    display: inline-block;
+    padding: 15px 35px; 
+    background-color: #a97142;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    white-space: nowrap; 
 }
 .button:hover{background-color: #ff0000;}
+p font[color="red"] {
+    display: block;
+    text-align: center;
+}
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
@@ -38,14 +48,14 @@ white-space: nowrap;
 <tr>
 <th><IMG SRC="صورة 2.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
 
-<p><FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق،
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي كاجوال أنيق. يتكون من قميص رمادي غامق،
 وبنطلون بلون بيج مائل للزيتوني، يكمل الإطلالة
 بحذاء رياضي أبيض </font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 92,000 ريال</s></font></p>
 <p>
-<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= </font>
-<FONT size="7" color="red" FACE="ARIAL"> 78,200 ريال</font>
+    <FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= </font>
+    <FONT size="7" color="red" FACE="ARIAL"> 78,200 ريال</font>
 </p>
 
 <div class="buttons-container">
@@ -56,4 +66,5 @@ white-space: nowrap;
 </tr>
 </table>
 </body>
+
 </html>
