--- a/صورة 2.html
+++ b/صورة 2.html
@@ -55,7 +55,7 @@ text-align: center;
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 92,000 ريال</s></font></p>
 <p>
 <FONT size="7" color="red" FACE="ARIAL"> =السعر الجديد </font>
-<FONT size="7" color="red" FACE="ARIAL"> 78,200 ريال</font>
+<FONT size="7" color="red" FACE="ARIAL"> 78,200 </font><FONT size="7" color="red" FACE="ARIAL"> ريال </font>
 </p>
 
 <div class="buttons-container">
