--- a/صورة 2.html
+++ b/صورة 2.html
@@ -54,8 +54,8 @@ text-align: center;
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 92,000 ريال</s></font></p>
 <p>
-<FONT size="7" color="red" FACE="ARIAL"> =السعر الجديد </font>
-<FONT size="7" color="red" FACE="ARIAL"> 78,200 </font><FONT size="7" color="red" FACE="ARIAL"> ريال </font>
+<FONT size="7" color="red" FACE="ARIAL"> =السعر الجديد </font>ريالس
+<FONT size="7" color="red" FACE="ARIAL"> 78,200 </font> ريال
 </p>
 
 <div class="buttons-container">
