--- a/صورة 3.html
+++ b/صورة 3.html
@@ -58,5 +58,14 @@ p font[color="red"] {
 
 <p>
 <FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 80,750 ريال </font>
-</
-    
+</p>
+
+<div class="buttons-container">
+<a href="صفحة الدفع.html" class="button">أطلب الآن</a>
+<a href="الملابس الجاهزة.html" class="button">العودة للتسوق</a>
+</div>
+</th>
+</tr>
+</table>
+</body>
+</html>
