--- a/صورة 4.html
+++ b/صورة 4.html
@@ -1,48 +1,87 @@
-﻿<!DOCTYPE html>
+أتفهم الآن تمامًا. لقد أرسلت لي المجموعة الأولى الجديدة التي تحتوي على محتوى المنتج (صورة 4، الوصف الجديد، الأسعار الجديدة).
+سأقوم الآن بدمج هذا المحتوى في هيكل المجموعة الثانية (الذي اتفقنا أنه الهيكل الموثوق والصحيح) من طلبك السابق.
+إليك الكود النهائي الذي يجمع بين هيكل المجموعة الثانية الموثوق ومحتوى صفحة "صورة 4":
+الكود النهائي المُحدَّث
+هذا الكود يستخدم جميع التنسيقات والـ CSS الموثوقة من المجموعة الثانية (التي استخدمتها في الرد السابق) ويستبدل المحتوى بالآتي:
+ * عنوان الصفحة: \text{صورة 4}
+ * مصدر الصورة: \text{صورة 4.PNG}
+ * وصف المنتج: \text{طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء...}
+ * السعر القديم: \text{120,000 ريال}
+ * السعر الجديد: \text{102,000 ريال}
+<!-- end list -->
+<!DOCTYPE html>
+<html>
 <head>
 <title>صورة 4</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-Body
-.container {text-align: center;}
-H1 {font-size: 24px;
-Margin-bottom: 20px;}
+/* **هيكل CSS الموثوق من المجموعة الثانية (مع تحسينات بسيطة)** */
+body {
+    text-align: center;
+}
+.product-card {
+    max-width: 400px; /* لضمان عرض أفضل من الـ 30% الثابتة */
+    margin: 20px auto; 
+    width: 90%; 
+}
+.description-text {
+    /* تنسيق الوصف: إزالة وسم p داخل p */
+    text-align: center; 
+    display: block;
+    margin: 10px 15px 20px 15px; 
+    line-height: 1.5; 
+}
 .buttons-container {
-Display: flex;
-Gap: 20px;
-Justify-content: center;}
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    padding: 10px 0; 
+}
 .button {
-Display: inline-block;
-Padding: 15px 30px;
-Background-color: #a97142;
-Color: white;
-Text-decoration: none;
-Border-radius: 10px;
-Font-size: 20px;
-Font-weight: bold;
-Transition: background-color 0.3s ease;}
-.button:hover{Background-color: #ff0000;}
+    display: inline-block;
+    padding: 15px 35px; 
+    background-color: #a97142;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    white-space: nowrap; /* لمنع انقسام النص */
+}
+.button:hover{background-color: #ff0000;}
+p font[color="red"] {
+    display: block;
+    text-align: center;
+}
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><table bgcolor="white" border="3" bordercolor="silver" align="center" width="30%" cellspacing="3" cellpadding="5">
-<center><tr>
-<th><IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;"><p>
-<FONT color="red" SIZE="4" FACE="ARIAL">طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء<p>
-مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل <p>
-الطقم بحذاء لوفر أسود</font>
-<p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 120,000 ريال</s></font><p>
-<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 102,000 ريال</font>
+
+<table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
+<tr>
+<th>
+
+<IMG SRC="صورة 4.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
+
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">طقم أنيق وعصري يجمع بين جاكيت أسود بأزرار بيضاء
+مع قميص داخلي أبيض وبنطلون بيج فاتح، ويكمل 
+الطقم بحذاء لوفر أسود</font></p>
+
+<p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 120,000 ريال</s></font></p>
+
+<p>
+<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 102,000 ريال </font>
+</p>
 
 <div class="buttons-container">
-<a href="صفحة الدفع.html" class="button">أطلب الآن</a>&nbsp &nbsp
+<a href="صفحة الدفع.html" class="button">أطلب الآن</a>
 <a href="الملابس الجاهزة.html" class="button">العودة للتسوق</a>
 </div>
 </th>
 </tr>
 </table>
 </body>
-
 </html>
 
