--- a/صورة 3.html
+++ b/صورة 3.html
@@ -1,63 +1,59 @@
 <!DOCTYPE html>
-<html>
 <head>
 <title>صورة 3</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
-    text-align: center;
+text-align: center;
 }
 .product-card {
-    max-width: 400px;
-    margin: 20px auto; 
-    width: 90%; 
+max-width: 400px;
+margin: 20px auto; 
+width: 90%; 
 }
 .description-text {
-    text-align: center; 
-    display: block;
-    margin: 10px 15px 20px 15px; 
-    line-height: 1.5; 
+text-align: center; 
+display: block;
+margin: 10px 15px 20px 15px; 
+line-height: 1.5; 
 }
 .buttons-container {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    padding: 10px 0; 
+display: flex;
+gap: 20px;
+justify-content: center;
+padding: 10px 0;
 }
 .button {
-    display: inline-block;
-    padding: 15px 35px; 
-    background-color: #a97142;
-    color: white;
-    text-decoration: none;
-    border-radius: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-    white-space: nowrap; 
+display: inline-block;
+padding: 15px 35px; 
+background-color: #a97142;
+color: white;
+text-decoration: none;
+border-radius: 10px;
+font-size: 20px;
+font-weight: bold;
+transition: background-color 0.3s ease;
+white-space: nowrap; 
 }
 .button:hover{background-color: #ff0000;}
 p font[color="red"] {
-    display: block;
-    text-align: center;
+display: block;
+text-align: center;
 }
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
 <tr>
-<th>
-
-<IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
+<th><IMG SRC="صورة 3.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
 
 <p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">طقم شبابي أنيق وهادئ. يتكون من قميص وردي مائل للبني
 وبنطلون بيج فاتح يكتمل الطقم بحذاء رياضي أبيض </font></p>
 
-<p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 95,000 ريال</s></font></p>
-
+<p><FONT color="black" FACE="ARIAL"><s>السعر القديم= 95,000 ريال </s></font></p>
 <p>
-<FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 80,750 ريال </font>
+<FONT size="7" color="red" FACE="ARIAL">السعر الجديد= 80,750 ريال </font>
 </p>
 
 <div class="buttons-container">
