--- a/صورة 5.html
+++ b/صورة 5.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 <title>صورة 5</title>
 <meta charset="UTF-8">
@@ -26,7 +27,7 @@ padding: 10px 0;
 }
 .button {
 display: inline-block;
-padding: 15px 35px; /* تم تعديل حجم الزر ليطابق القالب المعتمد */
+padding: 15px 35px; 
 background-color: #a97142;
 color: white;
 text-decoration: none;
@@ -34,7 +35,7 @@ border-radius: 10px;
 font-size: 20px;
 font-weight: bold;
 transition: background-color 0.3s ease;
-white-space: nowrap; /* مضافة من القالب */
+white-space: nowrap; 
 }
 .button:hover{background-color: #ff0000;}
 p font[color="red"] {
@@ -46,10 +47,11 @@ text-align: center;
 <body bgcolor="azure" style="background-image:url('خلفية معرفة السعر.jpg'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
 <tr>
-<th><IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
+<th>
+<IMG SRC="صورة 5.PNG" ALT="ملابس جاهزة" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن <p>
-المائل للأسود، يتألف من قميص بأكمام طويلة <p> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">طقم رجالي أحادي اللون بالكامل. باللون الرمادي الداكن 
+المائل للأسود، يتألف من قميص بأكمام طويلة 
 وجيوب على الصدر، وبنطلون رسمي، وحذاء لوفر أسود </font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 125,000 ريال</s></font></p>
