--- a/شريحة٢.html
+++ b/شريحة٢.html
@@ -48,7 +48,7 @@ text-align: center;
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
 <tr>
 <th>
-<IMG SRC="شريحة2.PNG" ALT="مكنسة كهربائية" align="center" style="max-width: 100%; height: auto;">
+<IMG SRC="شريحة2.PNG" ALT="جهاز كهربائي" align="center" style="max-width: 100%; height: auto;">
 
 <p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى خلاطة بهارات + قنينة ماء مجاناً</font></p>
 
@@ -66,3 +66,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
