--- a/شريحة١.html
+++ b/شريحة١.html
@@ -48,7 +48,7 @@ text-align: center;
 <table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
 <tr>
 <th>
-<IMG SRC="شريحة1.PNG" ALT="جهاز كهربائي" align="center" style="max-width: 100%; height: auto;">
+<IMG SRC="شريحة1.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
 <p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس مكنسة فرشاة صغير +</font></p>
 
@@ -66,3 +66,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
