--- a/شريحة٧.html
+++ b/شريحة٧.html
@@ -49,14 +49,14 @@ text-align: center;
 <tr>
 <th>
 <IMG SRC="شريحة7.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
-<b>
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد <p> 
-(ضمان سنتين)</font></p>
+
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد <br> 
+(ضمان سنتين)</font>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 987,000 ريال</s></font></p>
 <p>
 <FONT size="7" color="red" FACE="ARIAL"> السعر الجديد= 740,250 ريال </font>
-</p></b>
+</p>
 
 <div class="buttons-container">
 <a href="صفحة الدفع.html" class="button">أطلب الآن</a>
@@ -67,6 +67,7 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
 
 
