--- a/شريحة٧.html
+++ b/شريحة٧.html
@@ -51,7 +51,7 @@ text-align: center;
 <IMG SRC="شريحة7.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
 <p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد <br> 
-(ضمان سنتين)</font>
+(ضمان سنتين)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 987,000 ريال</s></font></p>
 <p>
@@ -67,6 +67,7 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
 
 
