--- a/شريحة٤.html
+++ b/شريحة٤.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة4.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة اتوماتيك "بوش" باب امامي لون رمادي <p> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة اتوماتيك "بوش" باب امامي لون رمادي <br> 
 (ضمان 5 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 550,000 ريال</s></font></p>
@@ -67,3 +67,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
