--- a/شريحة٣.html
+++ b/شريحة٣.html
@@ -50,7 +50,8 @@ text-align: center;
 <th>
 <IMG SRC="شريحة3.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غلاي شاي "كينود" درجة أولى (ضمان 5 سنوات)</font></p>
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غلاي شاي "كينود" صنعة بريطاني درجة أولى <br> 
+(ضمان 5 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 64,000 ريال</s></font></p>
 <p>
@@ -66,4 +67,5 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
