--- a/شريحة٥.html
+++ b/شريحة٥.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>شريحة5</title>
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة5.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة "بوش" اتوماتيك باب امامي لون أبيض <p> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة "بوش" اتوماتيك باب امامي لون أبيض <br> 
 (ضمان 5 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 525,000 ريال</s></font></p>
@@ -67,3 +67,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
