--- a/شريحة٦.html
+++ b/شريحة٦.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة6.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير 2 ابواب درجة أولى<br> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير 2 ابواب' درجة أولى<br> 
 (ضمان 10 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 2,200,000 ريال</s></font></p>
@@ -67,5 +67,6 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
 
