--- a/شريحة٨.html
+++ b/شريحة٨.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة8.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثانية <p> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثانية <br> 
 (ضمان 3 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 154,000 ريال</s></font></p>
@@ -67,3 +67,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
