--- a/شريحة١٠.html
+++ b/شريحة١٠.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة10.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك <p> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك <br>
 (ضمان سنتين)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 175,000 ريال</s></font></p>
@@ -67,3 +67,4 @@ text-align: center;
 </table>
 </body>
 </html>
+
