--- a/شريحة٤.html
+++ b/شريحة٤.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة4.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة اتوماتيك "بوش" باب امامي لون رمادي <br> 
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">غسالة "بوش" اتوماتيك باب امامي لون رمادي <br> 
 (ضمان 5 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 550,000 ريال</s></font></p>
@@ -59,7 +59,7 @@ text-align: center;
 </p>
 
 <div class="buttons-container">
-<a href="صفحة الدفع.html" class="button">أطلب الآن</a>
+<a href="صفحة الدفع.html" class=button">أطلب الآن</a>
 <a href="الاجهزة الكهربائية.html" class="button">العودة للتسوق</a>
 </div>
 </th>
@@ -67,4 +67,5 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
