--- a/شريحة٤.html
+++ b/شريحة٤.html
@@ -59,7 +59,7 @@ text-align: center;
 </p>
 
 <div class="buttons-container">
-<a href="صفحة الدفع.html" class=button">أطلب الآن</a>
+<a href="صفحة الدفع.html" class="button">أطلب الآن</a>
 <a href="الاجهزة الكهربائية.html" class="button">العودة للتسوق</a>
 </div>
 </th>
@@ -67,5 +67,3 @@ text-align: center;
 </table>
 </body>
 </html>
-
-
