--- a/شريحة٢.html
+++ b/شريحة٢.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة2.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى خلاطة بهارات + قنينة ماء مجاناً</font></p>
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى + خلاطة بهارات + قنينة ماء مجاناً</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 176,000 ريال</s></font></p>
 <p>
@@ -66,5 +66,6 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
 
