--- a/شريحة٩.html
+++ b/شريحة٩.html
@@ -50,7 +50,7 @@ text-align: center;
 <th>
 <IMG SRC="شريحة9.PNG" ALT="تحميل صورة المنتج" align="center" style="max-width: 100%; height: auto;">
 
-<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">مكنسة كهربائية روبوتيك مع نظام GPS <br>
+<p class="description-text"><FONT color="red" SIZE="4" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام <br>
 (ضمان 4 سنوات)</font></p>
 
 <p><FONT color="black" FACE="ARIAL"><s> السعر القديم= 660,000 ريال</s></font></p>
@@ -67,4 +67,5 @@ text-align: center;
 </table>
 </body>
 </html>
+
 
