--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -2,6 +2,7 @@
 <head>
 <title>الاجهزة الكهربائية</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 Body
 .container {text-align: center;}
@@ -31,7 +32,7 @@ Transition: background-color 0.3s ease;}
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
 <pre>
-<table bgcolor="white" border="3" bordercolor="silver" align="center" height="1000" width="400" cellspacing="3" cellpadding="5">
+<table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
 <center><tr>
 <th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة" align="center">
 <p><FONT color="red" SIZE="5" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
@@ -79,3 +80,4 @@ _______________________________________<p></font>
 </body>
 
 </html>
+
