--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 <title>الاجهزة الكهربائية</title>
 <meta charset="UTF-8">
@@ -77,7 +77,6 @@ _______________________________________<p></font>
 <div class="buttons-container">
 <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div>
+</center>
 </body>
-
 </html>
-
