--- a/الاجهزة الكهربائية.html
+++ b/الاجهزة الكهربائية.html
@@ -4,6 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+.content-wrapper {
+max-width: 1200px;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
+}
 Body
 .container {text-align: center;}
 H1 {font-size: 24px;
@@ -23,60 +29,71 @@ Font-size: 25px;
 Font-weight: bold;
 Transition: background-color 0.3s ease;}
 .button:hover{Background-color: #0056b3;}
+.product-card img {
+max-width: 100%;
+height: auto;
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+.product-card {
+margin-left: auto;
+margin-right: auto;
+}
 </style>
 </head>
 <body bgcolor="azure" style="background-image:url('خلفية صفحة الاجهزة الكهربائية.png'); background-repeat: no-repeat;background-size: cover; background-position: center center;">
-<center><img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
-
-<b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br> 
+<div class="content-wrapper">
+<img src="الشعار بدون خلفية.png" alt="BuyZone" height="250" width="350"><br>
+<b><font SIZE="5" color="darkorange" face="Tahoma">سرعةٌ في التوصيل ... وجودةٌ في المنتج <br>
 _______________________________________<p></font>
 <font color="black" SIZE="25" face="DecoType Naskh Variants">مرحباً بكم في صفحة الاجهزة الكهربائية</font> <p>
 <pre>
-<table class="product-card" bgcolor="white" border="3" bordercolor="silver" align="center" cellspacing="3" cellpadding="5">
-<center><tr>
-<th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة" align="center">
+<table class="product-card" bgcolor="white" border="3" bordercolor="silver" cellspacing="3" cellpadding="5">
+<tr>
+<th><a href="شريحة٧.html"><IMG SRC="شريحة7.PNG" ALT="مكينة صنع القهوة">
 <p><FONT color="red" SIZE="5" FACE="ARIAL">مكينة صناعة القهوة اسبريسوا كوب واحد
 (ضمان سنتين)</th>
-<th><a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى 
+<th><a href="شريحة٢.html"><IMG SRC="شريحة2.PNG" ALT="خلاطة كهربائية">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">خلاطة عصائر "سوناي" حجم كبير درجة أولى
 خلاطة بهارات + قنينة ماء مجاناً +</th>
 </tr>
 <tr>
-<td><center><a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام 
+<td><a href="شريحة٩.html"><IMG SRC="شريحة9.PNG" ALT="روبوت التنظيف">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">GPS مكنسة كهربائية روبوتيك مع نظام
 (ضمان 4 سنوات)</td>
-<td><center><a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط" align="center">
+<td><a href="شريحة٨.html"><IMG SRC="شريحة8.PNG" ALT="عجانة خليط">
 <p><FONT color="red" SIZE="5" FACE="ARIAL">عجانة خليط "كيكوتيك" مطورة درجة ثاني
 (ضمان 3 سنوات)</td>
 </tr>
 <tr>
-<td><center><a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غلاي شاي "كينود" درجة أولى 
+<td><a href="شريحة٣.html"><IMG SRC="شريحة3.PNG" ALT="غلاية شاي">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">غلاي شاي "كينود" درجة أولى
 (ضمان 5 سنوات)</td>
-<td><center><a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون رمادي 
+<td><a href="شريحة٤.html"><IMG SRC="شريحة4.PNG" ALT="غسالة لون رمادي">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون رمادي
 (ضمان 5 سنوات)</td>
 <tr>
-<td><center><a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون أبيض 
+<td><a href="شريحة٥.html"><IMG SRC="شريحة5.PNG" ALT="غسالة لون أبيض">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">غسالة "بووش" اتوماتيك باب امامي لون أبيض
 (ضمان 5 سنوات)</td>
-<td><center><a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك 
+<td><a href="شريحة١٠.html"><IMG SRC="شريحة10.PNG" ALT="مكنسة كهربائية">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة كهربائية كلاسيكية "باناسونيك
 (ضمان سنتين)</td>
 </tr>
 <tr>
-<td><center><a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس 
+<td><a href="شريحة١.html"><IMG SRC="شريحة1.PNG" ALT="مكنسة كهربائية">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">"مكنسة بشكل عصا طويلة وحديثة "فيليبس
 مكنسة فرشاة قصيرة +</td>
-<td><center><a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي" align="center">
-<p><FONT color="red" SIZE="5" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى 
+<td><a href="شريحة٦.html"><IMG SRC="شريحة6.PNG" ALT="ثلاجة هيتاشي">
+<p><FONT color="red" SIZE="5" FACE="ARIAL">ثلاجة "هيتاشي" حجم كبير '2 ابواب' درجة أولى
 (ضمان 10 سنوات)</td>
 </tr>
-
 </table><p>
 <div class="buttons-container">
 <a href="index.html" class="button">العودة الى صفحة الموقع الرسمية</a>
 </div>
-</center>
+</div>
 </body>
-</html>
+  </html>
+  
